<resources>
    <string name="app_name">FriendFinder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_button">Register Account</string>
    <string name="title_activity_my_user_profile">My Profile</string>
    <string name="title_activitty_register_account">Register Account</string>
    <string name="title_browse_profiles">Browse</string>
    <string name="title_chat">Chat</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="loading">Loading</string>

    <array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </array>


    <string-array name="hobby_names">
        <item>Zumba"</item>
        <item>Yoga</item>
        <item>Woodwork</item>
        <item>Volunteer</item>
    </string-array>

    <string-array name="hobby_codes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="hobby_icons">
        <item>@drawable/zumba</item>
        <item>@drawable/yoga</item>
        <item>@drawable/woodwork</item>
        <item>@drawable/volunteer</item>
        <item>@drawable/social</item>

    </string-array>
</resources>
