<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_my_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_activity_my_user_profile"/>

    <item
        android:id="@+id/navigation_browse_user_profiles"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_browse_profiles" />

    <item
        android:id="@+id/navigaion_chat"
        android:icon="@drawable/ic_chat_bubble_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    
</menu>
